--- a/app/src/main/res/color/bottom_nav_text_selector.xml
+++ b/app/src/main/res/color/bottom_nav_text_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt">
-    <item android:color="@color/purplesBottomNavNotActive" android:state_checked="false" />
+    <item android:color="@color/indigo10" android:state_checked="false" />
     <item android:color="@color/purplesBottomNavActive" android:state_checked="true" />
 </selector>
