--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,15 +14,19 @@
             android:id="@+id/nav_view"
             android:layout_width="0dp"
             android:layout_height="@dimen/bottom_nav_height"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp"
-            android:background="@color/purpleDarkBottomNav"
-            app:itemRippleColor="@color/purplesBottomActiveIconBg"
+            android:layout_gravity="start"
+            android:paddingBottom="@dimen/bottom_nav_padding"
+            android:paddingTop="@dimen/bottom_nav_padding"
+            android:background="@color/indigo60"
+            app:itemRippleColor="@color/indigo50"
             app:itemTextColor="@color/bottom_nav_text_selector"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/bottom_nav_menu" />
+            app:menu="@menu/bottom_nav_menu">
+
+
+        </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 
         <fragment
