--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,14 +17,19 @@
 
     <dimen name="connect_state_button_height">155dp</dimen>
     <dimen name="connect_state_button_width">105dp</dimen>
-    <dimen name="bottom_nav_height">68dp</dimen>
+    <dimen name="bottom_nav_height">70dp</dimen>
     <dimen name="connection_button_bottom_padding">84dp</dimen>
-    <dimen name="connection_button_upper_guideline">206dp</dimen>
-    <dimen name="connection_button_lower_guideline">84dp</dimen>
+    <dimen name="connection_button_upper_guideline">170dp</dimen>
+    <dimen name="connection_button_lower_guideline">82dp</dimen>
     <dimen name="design_bottom_navigation_height" tools:override="true">62dp</dimen>
     <dimen name="title_top_padding">56dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="list_item_spacing">16dp</dimen>
     <dimen name="list_item_spacing_half">8dp</dimen>
+    <dimen name="bottom_nav_padding">6dp</dimen>
+    <dimen name="stat_top_margin">0dp</dimen>
+    <dimen name="stat_cards_padding">16dp</dimen>
+    <dimen name="stat_card_height">70dp</dimen>
+    <dimen name="stat_switch_height">78dp</dimen>
 
 </resources>
